examples/test/testpolicy17486.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17486
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key31: value13
      key4: value16
      key6: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value36
          key1: value43
          key17: value43
      podSelector:
        matchLabels:
          key36: value49
